force-app/main/default/objects/Contact/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Medical Science</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Automation Technology</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>Data Science &amp; Analysis</fullName>
            </value>
            <value>
                <fullName>Social Science</fullName>
            </value>
            <value>
                <fullName>Defense Technology</fullName>
            </value>
            <value>
                <fullName>Marine Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>