force-app/main/default/objects/Contact/fields/Domain_Experties__c.field-meta.xml
<CustomField>
    <fullName>Domain_Experties__c</fullName>
    <label>Domain Experties</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Domain__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Image Processing</fullName>
            </value>
            <value>
                <fullName>VLSI</fullName>
            </value>
            <value>
                <fullName>Nano Technology</fullName>
            </value>
            <value>
                <fullName>DSP processor</fullName>
            </value>
            <value>
                <fullName>Microprocessor</fullName>
            </value>
            <value>
                <fullName>Bio Medical</fullName>
            </value>
            <value>
                <fullName>Bio Instrumentation</fullName>
            </value>
            <value>
                <fullName>Design Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>