force-app/main/default/objects/Contact/fields/User_for_Esay_Chair__c.field-meta.xml
<CustomField>
    <fullName>User_for_Esay_Chair__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User for Esay Chair</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>