force-app/main/default/objects/Contact/recordTypes/Contact_Type.recordType-meta.xml
<RecordType>
    <fullName>Contact_Type</fullName>
    <active>true</active>
    <label>Contact Type</label>
</RecordType>