force-app/main/default/objects/Contact/recordTypes/Editor.recordType-meta.xml
<RecordType>
    <fullName>Editor</fullName>
    <active>true</active>
    <description>Record Type for Editor</description>
    <label>Editor</label>
</RecordType>