force-app/main/default/objects/Contact/recordTypes/Editor_In_Chief.recordType-meta.xml
<RecordType>
    <fullName>Editor_In_Chief</fullName>
    <active>true</active>
    <description>Record Type for Editor In Cheif</description>
    <label>Editor In Chief</label>
</RecordType>