force-app/main/default/objects/Contact/recordTypes/Reviewer.recordType-meta.xml
<RecordType>
    <fullName>Reviewer</fullName>
    <active>true</active>
    <description>Record Type for Reviewer</description>
    <label>Reviewer</label>
</RecordType>