force-app/main/default/objects/Contact/listViews/Profile_name_view.listView-meta.xml
<ListView>
    <fullName>Profile_name_view</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contact_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>Profile name view</label>
</ListView>